# johen

./: .craft.yml  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: build_release.yml  ci.yml  tests.yml
scripts/: bump-version.sh
src/johen/: __init__.py  change_watcher.py  config.py  examples.py  globals.py  named_bool.py  pytest.py  random.py
src/johen/generators/: annotations.py  base.py  pydantic.py  specialized.py  sqlalchemy.py
tests/: test_base.py
